--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -18,39 +18,21 @@ header{
   }
 
   nav{
-    height: 3.5rem;
+    
     width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;   
-    margin: 0;  
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
+    margin: 0;   
     
     
   }
- nav > a{
-  width: 20%;
-  text-decoration: none;
- }
-  .navegacion{
-    max-height: 100%;
-    background-color: white;
-    color:#1dabc7;
-    text-align: center;
+  nav > a{
     padding: auto;
-    
-    padding:0.5rem;      
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    font-size: 1rem;
-    border-radius: 1rem;
-    font-size: 1rem;
-    border: inset;
+    text-align: center;
+    text-justify: center;
   }
-  .navegacion:hover{
-    color:white;
-    background-color: black;
-    border: white;
-  }
+  
   .iconUsina{
     width: 10rem;
     height: 4rem;
@@ -67,7 +49,44 @@ header{
   }
   /*arrow Up*/
  
+    /* style button tag nav*/
+
+ 
+    button {
+      --b: 3px;   /* border thickness */
+      --s: .15em; /* size of the corner */
+      --c: #BD5532;
+      
+      padding: calc(.05em + var(--s)) calc(.3em + var(--s));
+      color: var(--c);
+      --_p: var(--s);
+      background:
+        conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--c) 0)
+        var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+      transition: .3s linear, color 0s, background-color 0s;
+      outline: var(--b) solid #0000;
+      outline-offset: .2em;
+    }
+    button:hover,
+    button:focus-visible{
+      --_p: 0px;
+      outline-color: var(--c);
+      outline-offset: .05em;
+    }
+    button:active {
+      background: var(--c);
+      color: #fff;
+    }
   
+    button {
+      font-family: system-ui, sans-serif;
+      font-weight: bold;
+      font-size: 2rem;
+      cursor: pointer;
+      border: none;
+      margin: .1em;
+    }
+
   @media (max-width:700px){
     .navegacion{
       font-size:0.5rem;
@@ -75,4 +94,12 @@ header{
   header h1{
     font-size: 1.2rem;
   }
+  nav{
+    grid-template-columns: 50% 50%;    
+  }
+  button{
+    font-size: 1rem;
+  }
   }  
+
+
